[project]
name = "pyspark-utils"
dynamic = ["version"]
description = "PySpark Utils"
readme = "README.md"
requires-python = ">=3.9.0"

dependencies = [
    "pyspark",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "pyspark_utils.__version__" }


[[tool.uv.index]]
name = "pyspark"
url = "https://pypi.org/simple"
default = true
