[metadata]
name = pyspark_utils
version = 0.0.1
author = Andrew Gross
author_email = andrew.w.gross@gmail.com
description = 'A simple Parquet converter for JSON/python data'
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/andrewgross/pyspark_utils
project_urls =
    Bug Tracker = https://github.com/andrewgross/pyspark_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyspark

[options.packages.find]
where = src