[metadata]
name = pyspark_utils
version = 0.0.1
description = 'A simple Parquet converter for JSON/python data'
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/andrewgross/pyspark_utils
author = Andrew Gross
author_email = andrew.w.gross@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/andrewgross/pyspark_utils/issues

[options]
packages = find:
install_requires =
    pyspark
python_requires = >=3.8
package_dir =
    = src

[options.packages.find]
where = src
